Now it’s possible connect in mongodb using uri.